--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,9 +39,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@master
       - name: Download Artifact
-        uses: actions/download-artifact@master
+        uses: actions/download-artifact@v2
         with:
           name: build
+          path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
